@@ -1,3 +1,10 @@
+2007-03-17  Shaun McCance  <shaunm@gnome.org>
+
+	* src/test-transform.c:
+	* src/yelp-transform.c:
+	* src/yelp-transform.h:
+	- Changed the callback API a bit, basically ready
+
 2006-07-03  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-document.c: (yelp_document_dispose),
